estructura completa del profolio

--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,61 @@
         </div>
     </header>
     <main>
-            
+        <section class="projects">
+            <h2>Mis proyectos</h2>
+            <section class="project-list">
+                <article class="project">
+                    <img src="https://placehold.co/600x400/EEE/31343C" alt="img proyecto 1">
+                    <div class="project__info">
+                        <h3>projecto1</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicin</p>
+                        <a class="project__link" href="https//linkedin.com">
+                            <button>acceder</button>
+                        </a>
+                    </div>
+                </article>
+                <article class="project">
+                    <img src="https://placehold.co/600x400/EEE/31343C" alt="img proyecto 2">
+                    <h3>projecto1</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicin</p>
+                    <a href="https//linkedin.com">
+                        <button>acceder</button>
+                    </a>
+                </article>
+                <article class="project">
+                    <img src="https://placehold.co/600x400/EEE/31343C" alt="img proyecto 3">
+                    <h3>projecto1</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicin</p>
+                    <a href="https//linkedin.com">
+                        <button>acceder</button>
+                    </a>
+                </article>
+                <article class="project">
+                    <img src="https://placehold.co/600x400/EEE/31343C" alt="img proyecto 4">
+                    <h3>projecto1</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicin</p>
+                    <a href="https//linkedin.com">
+                        <button>acceder</button>
+                    </a>
+                </article>
+                <article class="project">
+                    <img src="https://placehold.co/600x400/EEE/31343C" alt="img proyecto 5">
+                    <h3>projecto1</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicin</p>
+                    <a href="https//linkedin.com">
+                        <button>acceder</button>
+                    </a>
+                </article>
+                <article class="project">
+                    <img src="https://placehold.co/600x400/EEE/31343C" alt="img proyecto 6">
+                    <h3>projecto1</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicin</p>
+                    <a href="https//linkedin.com">
+                        <button>acceder</button>
+                    </a>
+                </article>
+            </section>
+        </section>
     </main>
     <footer>
         <div id="footer-container">
