--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <h2 id="header-job">Ingeniero Electrónico Industrial</h2>
 
             <nav id="header-nav">
-                <ul id="nav-links" style="list-style-type: none">
-                    <li class="nav-links active"><a href="./index.html"><i class="fa-solid fa-house-user"></i>Home</a></li>
+                <ul id="nav-links">
+                    <li class="nav-links"><a href="./index.html"><i class="fa-solid fa-house-user"></i>Home</a></li>
                     <li class="nav-links"><a href="./projects.html"><i class="fa-solid fa-briefcase"></i></i>Projects</a></li>
                     <li class="nav-links"><a href="./contact.html"><i class="fa-solid fa-address-book"></i>Contact</a></li>
                 </ul>
