--- a/projects.html
+++ b/projects.html
@@ -32,56 +32,104 @@
     <main>
         <section class="projects">
             <h2>Mis proyectos</h2>
+            <hr>
             <section class="project-list">
                 <article class="project">
-                    <img src="https://placehold.co/600x400/EEE/31343C" alt="img proyecto 1">
+                    <img src="https://placehold.co/600x400" alt="imagen de proyecto 1">
                     <div class="project__info">
-                        <h3>projecto1</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicin</p>
-                        <a class="project__link" href="https//linkedin.com">
-                            <button>acceder</button>
+                        <h3>Proyecto 1</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore unde ex at, inventore sed,
+                            excepturi cupiditate assumenda quae non natus consequuntur! Commodi, nam iure maxime deleniti
+                            debitis recusandae blanditiis doloribus.
+                        </p>
+                        <a class="project__link"href="https://google.com" target="_blank">
+                            <button>Acceder</button>
                         </a>
                     </div>
                 </article>
                 <article class="project">
-                    <img src="https://placehold.co/600x400/EEE/31343C" alt="img proyecto 2">
-                    <h3>projecto1</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicin</p>
-                    <a href="https//linkedin.com">
-                        <button>acceder</button>
-                    </a>
+                    <img src="https://placehold.co/600x400" alt="imagen de proyecto 1">
+                    <div class="project__info">
+                        <h3>Proyecto 1</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore unde ex at, inventore sed,
+                            excepturi cupiditate assumenda quae non natus consequuntur! 
+                        </p>
+                        <a class="project__link"href="https://google.com" target="_blank">
+                            <button>Acceder</button>
+                        </a>
+                    </div>
                 </article>
                 <article class="project">
-                    <img src="https://placehold.co/600x400/EEE/31343C" alt="img proyecto 3">
-                    <h3>projecto1</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicin</p>
-                    <a href="https//linkedin.com">
-                        <button>acceder</button>
-                    </a>
+                    <img src="https://placehold.co/600x400" alt="imagen de proyecto 1">
+                    <div class="project__info">
+                        <h3>Proyecto 1</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore unde ex at, inventore sed,
+                            excepturi cupiditate assumenda quae non natus consequuntur! Commodi, nam iure maxime deleniti
+                            debitis recusandae blanditiis doloribus.
+                        </p>
+                        <a class="project__link"href="https://google.com" target="_blank">
+                            <button>Acceder</button>
+                        </a>
+                    </div>
                 </article>
                 <article class="project">
-                    <img src="https://placehold.co/600x400/EEE/31343C" alt="img proyecto 4">
-                    <h3>projecto1</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicin</p>
-                    <a href="https//linkedin.com">
-                        <button>acceder</button>
-                    </a>
+                    <img src="https://placehold.co/600x400" alt="imagen de proyecto 1">
+                    <div class="project__info">
+                        <h3>Proyecto 1</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore unde ex at, inventore sed,
+                            excepturi cupiditate assumenda quae non natus consequuntur! Commodi, nam iure maxime deleniti
+                            debitis recusandae blanditiis doloribus.
+                        </p>
+                        <a class="project__link"href="https://google.com" target="_blank">
+                            <button>Acceder</button>
+                        </a>
+                    </div>
                 </article>
                 <article class="project">
-                    <img src="https://placehold.co/600x400/EEE/31343C" alt="img proyecto 5">
-                    <h3>projecto1</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicin</p>
-                    <a href="https//linkedin.com">
-                        <button>acceder</button>
-                    </a>
+                    <img src="https://placehold.co/600x400" alt="imagen de proyecto 1">
+                    <div class="project__info">
+                        <h3>Proyecto 1</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore unde ex at, inventore sed,
+                            excepturi cupiditate assumenda quae non natus consequuntur! Commodi, nam iure maxime deleniti
+                            debitis recusandae blanditiis doloribus.
+                        </p>
+                        <a class="project__link"href="https://google.com" target="_blank">
+                            <button>Acceder</button>
+                        </a>
+                    </div>
                 </article>
                 <article class="project">
-                    <img src="https://placehold.co/600x400/EEE/31343C" alt="img proyecto 6">
-                    <h3>projecto1</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicin</p>
-                    <a href="https//linkedin.com">
-                        <button>acceder</button>
-                    </a>
+                    <img src="https://placehold.co/600x400" alt="imagen de proyecto 1">
+                    <div class="project__info">
+                        <h3>Proyecto 1</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore unde ex at, inventore sed,
+                            excepturi cupiditate assumenda quae non natus consequuntur! Commodi, nam iure maxime deleniti
+                            debitis recusandae blanditiis doloribus.
+                        </p>
+                        <a class="project__link"href="https://google.com" target="_blank">
+                            <button>Acceder</button>
+                        </a>
+                    </div>
+                </article>
+                <article class="project">
+                    <img src="https://placehold.co/600x400" alt="imagen de proyecto 1">
+                    <div class="project__info">
+                        <h3>Proyecto 1</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore unde ex at, inventore sed,
+                            excepturi cupiditate assumenda quae non natus consequuntur! Commodi, nam iure maxime deleniti
+                            debitis recusandae blanditiis doloribus.
+                        </p>
+                        <a class="project__link"href="https://google.com" target="_blank">
+                            <button>Acceder</button>
+                        </a>
+                    </div>
                 </article>
             </section>
         </section>
