Botones formulario ADD

--- a/contact.html
+++ b/contact.html
@@ -51,6 +51,10 @@
                     </fieldset>
                     <label for="content">Escribe tu mensaje</label>
                     <textarea name="content" id="content" cols="30" rows="10"></textarea>
+                    <div class="form-actions-buttons">
+                        <button type="submit">Enviar</button>
+                        <button type="reset">Limpiar</button>
+                    </div>
                 </form>
         </section>
     </main>
